# stanford-cs336

./: .gitignore  README.md  pyproject.toml
cs336_alignment/: __init__.py  data.py  dpo.py  grpo.py  metrics.py  pyproject.toml  sft.py  tokenize.py
cs336_basics/: BPETokenizer.py  __init__.py  activation.py  attention.py  data.py  embedding.py  layer.py  linear.py  loss.py  norm.py  optimizer.py  positional_encoding.py  pretokenization.py  pyproject.toml  scheduler.py  serialization.py  utils.py
cs336_systems/: FlashAttention.py  __init__.py  ddp.py  optim.py  pyproject.toml
tests/: adapters.py  common.py  conftest.py  test_data.py  test_tokenizer.py  test_train_bpe.py
